deleted tailwind.config.js from tailwind setup folder and added at root directory

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/Ashutosh-kesharwani/javascript-30-challenge/issues"
   },
